# superstream

./: .editorconfig  .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  .prettierrc.cjs  .simple-git-hooks.cjs  Anchor.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.husky/: pre-push
client/: .eslintignore  .eslintrc.cjs  README.md  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
client/scripts/: copy-program-files.ts
client/src/: client-internal.ts  client.ts  constants.ts  filters.ts  index.ts  pagination.ts  stream-status.ts  stream.ts
inspector/: .eslintignore  .eslintrc.cjs  README.md  package.json  tsconfig.json
inspector/docs/: run.md  stats.md
inspector/scripts/: generate-docs.ts
inspector/src/: cli.ts  command.ts  (+1 more)
migrations/: deploy.ts
program/: .eslintignore  .eslintrc.cjs  Anchor.toml  README.md  package.json  rustfmt.toml  tsconfig.json
program/programs/superstream/: Cargo.toml
program/programs/superstream/src/: error.rs  lib.rs  state.rs  transfer.rs  utils.rs
programs/streaming/: Cargo.toml
programs/streaming/src/: error.rs  lib.rs  state.rs  transfer.rs  utils.rs
scripts/: verify-no-git-changes.sh
tests/: streaming.ts
ts/: package.json  pnpm-lock.yaml  rollup.config.ts  tsconfig.base.json  tsconfig.cjs.json  tsconfig.json
website/: .browserslistrc  .eslintignore  .eslintrc.cjs  .stylelintignore  .stylelintrc.cjs  README.md  next.config.mjs  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json
(+174 files in other folders)
