[package]
name = "streaming"
version = "0.1.0"
description = "Streaming and vesting payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "streaming"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
